--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -10,7 +10,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".Login"
     android:screenOrientation="portrait"
-    android:background="#104E8B">
+    android:background="#1874CD">
 
     <!-- Login progress -->
     <ProgressBar
@@ -75,7 +75,7 @@
                 android:textSize="22dp"
                 android:textColor="@android:color/white"
                 android:id="@+id/chkMostrarSenha"
-                android:checked="@android:color/white"/>
+                android:checked="@android:color/white" />
 
             <TextView
                 android:layout_marginTop="5dp"
@@ -91,11 +91,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
-                android:text="ENTRAR"
+                android:text="AUTENTICAR"
                 android:textStyle="bold"
                 android:textColor="@android:color/white"
-                android:textSize="20dp"
-                android:background="#1874CD" />
+                android:textSize="24dp"
+                android:background="#104E8B" />
 
             <Button
                 android:id="@+id/cadastro"
@@ -106,7 +106,7 @@
                 android:text="@string/cadastar"
                 android:textStyle="bold"
                 android:textColor="@android:color/white"
-                android:textSize="18dp"
+                android:textSize="20dp"
                 android:background="@android:color/transparent"/>
             <Button
                 android:id="@+id/btNaoLembraSenha"
@@ -117,7 +117,7 @@
                 android:text="Redefinir Senha"
                 android:textStyle="bold"
                 android:textColor="@android:color/white"
-                android:textSize="18dp"
+                android:textSize="20dp"
                 android:background="@android:color/transparent" />
         </LinearLayout>
     </ScrollView>
