--- a/app/src/main/res/layout/fragment_fragment_filtros_produtos.xml
+++ b/app/src/main/res/layout/fragment_fragment_filtros_produtos.xml
@@ -3,6 +3,10 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+    <ScrollView
+        android:id="@+id/login_form"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -78,6 +82,7 @@
                 android:text="Consultar"
                 android:textColor="@color/corTextViewUm"
                 android:textSize="25dp"/>
+    </ScrollView>
 </LinearLayout>
 
 
